# SDL2_projects

./: 06_extension_libraries_and_loading_other_image_formats.cpp  CMakeLists.txt  CMakePresets.json  Ltexture.cpp  Ltexture.h  SDL2_tutorial.cpp  readme.txt
